# pokedexv1

./: README.md  login.js  main.py  pokedex.sqbpro  pyproject.toml  vercel.json
backend/: api_sample.py  pokedex.db  preload.py  requirements.txt  start.sh
frontend/: index.css  index.html  pokedex.html  pokedex.js
