[project]
name = "pokedexfinal"
version = "0.1.0"
description = ""
authors = [
    {name = "EnriqueZS",email = "henry_zusantoyo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pokebase (>=1.4.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "tortoise-orm (>=0.25.0,<0.26.0)",
    "python-decouple (>=3.8,<4.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
httpx = "^0.24.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"